# breakpoint

./: .gitignore  README.md  pyproject.toml
.github/workflows/: update.yml
breakpoint/: audit.py  audit_market.py  cli.py  clv.py  db.py  export.py  name_resolver.py  predict.py  train_stats.py
breakpoint/betting/: ledger.py  rationale.py
breakpoint/features/: build.py  elo.py  live.py
breakpoint/ingest/: odds_api.py  sackmann.py  sofascore.py  tennisdata.py
breakpoint/models/: baseline.py
dashboard/: index.html  package.json  tailwind.config.js  vite.config.ts
dashboard/public/data/: audit.json  audit_market.json  open_bets.json  players.json  pnl_curve.json  settled_bets.json  summary.json  train_stats.json
dashboard/src/: App.tsx  index.css
dashboard/src/lib/: data.ts
dashboard/src/pages/: About.tsx  Bets.tsx  Home.tsx  Model.tsx  Players.tsx
data/scout/: 01_players.json  02_schedule.json  03_surface_form.json  04_h2h.json  05_injuries.json  06_odds.json  07_conditions.json  README.md
